--- a/.github/workflows/deploy-github.yml
+++ b/.github/workflows/deploy-github.yml
@@ -9,6 +9,9 @@ on:
 
 jobs:
   deploy:
+    name: 'deploy-dhruv-site'
+    permissions:
+      contents: write
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
